--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
     ],
     "require": {
         "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^9.0"
+        "commerceguys/addressing": "^1.3",
+        "illuminate/contracts": "^9.0",
+        "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
@@ -31,8 +32,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Rpungello\\AddressFormatter\\": "src",
-            "Rpungello\\AddressFormatter\\Database\\Factories\\": "database/factories"
+            "Rpungello\\AddressFormatter\\": "src"
         }
     },
     "autoload-dev": {
