--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "keywords": [
         "rpungello",
         "laravel",
-        "laravel-address-formatter"
+        "address",
+        "formatter"
     ],
     "homepage": "https://github.com/rpungello/laravel-address-formatter",
     "license": "MIT",
@@ -18,17 +19,18 @@
     "require": {
         "php": "^8.1",
         "commerceguys/addressing": "^1.3",
-        "illuminate/contracts": "^9.0",
+        "illuminate/contracts": "^9.0|^10.0|^11.0",
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^6.0",
-        "orchestra/testbench": "^7.0",
-        "pestphp/pest": "^1.21",
-        "pestphp/pest-plugin-laravel": "^1.1",
-        "phpunit/phpunit": "^9.5",
-        "spatie/laravel-ray": "^1.26"
+        "nunomaduro/collision": "^6.0|^8.1",
+        "orchestra/testbench": "^7.0|^8.0|^9.0",
+        "pestphp/pest": "^1.21|^2.0",
+        "pestphp/pest-plugin-laravel": "^1.1|^2.3",
+        "phpunit/phpunit": "^9.5|^10.0",
+        "spatie/laravel-ray": "^1.26",
+        "nesbot/carbon": "^2.72|^3.0"
     },
     "autoload": {
         "psr-4": {
