--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        php: [8.1, 8.2, 8.3]
+        php: [8.1, 8.2, 8.3, 8.4]
         laravel: [9.*, 10.*, 11.*]
         stability: [prefer-lowest, prefer-stable]
         include:
@@ -26,6 +26,10 @@ jobs:
         exclude:
           - php: 8.1
             laravel: 11.*
+          - php: 8.4
+            laravel: 9.*
+          - php: 8.4
+            laravel: 10.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
