--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         php: [8.1, 8.2, 8.3, 8.4]
-        laravel: [9.*, 10.*, 11.*]
+        laravel: [9.*, 10.*, 11.*, 12.*]
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 9.*
@@ -25,7 +25,7 @@ jobs:
             testbench: 9.*
         exclude:
           - php: 8.1
-            laravel: 11.*
+            laravel: [11.*, 12.*]
           - php: 8.4
             laravel: 9.*
           - php: 8.4
