--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": "^8.1",
         "commerceguys/addressing": "^1.3",
-        "illuminate/contracts": "^9.0|^10.0|^11.0",
+        "illuminate/contracts": "^9.0|^10.0|^11.0|^12.0",
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
