--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -27,7 +27,9 @@ jobs:
             testbench: 10.*
         exclude:
           - php: 8.1
-            laravel: [11.*, 12.*]
+            laravel: 11.*
+          - php: 8.1
+            laravel: 12.*
           - php: 8.4
             laravel: 9.*
           - php: 8.4
