--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^6.0|^8.1",
         "orchestra/testbench": "^7.0|^8.0|^9.0|^10.0",
-        "pestphp/pest": "^1.21|^2.0",
-        "pestphp/pest-plugin-laravel": "^1.1|^2.3",
-        "phpunit/phpunit": "^9.5|^10.0",
+        "pestphp/pest": "^1.21|^2.0|^3.0",
+        "pestphp/pest-plugin-laravel": "^1.1|^2.3|^3.0",
+        "phpunit/phpunit": "^9.5|^10.0|^11.0",
         "spatie/laravel-ray": "^1.26",
         "nesbot/carbon": "^2.72|^3.0"
     },
